# projetoOMonitor

./: .gitignore  LICENSE  README.md  pyproject.toml
Omonitor_versaoPreAlfa/: composer.json
Omonitor_versaoPreAlfa/API/: README.md  package-lock.json  package.json
Omonitor_versaoPreAlfa/APP/: index.html  teste-absoluto.html  teste-landing.html  teste-sistema.html
Omonitor_versaoPreAlfa/BD/: README.md  bootstrap.php  sync.php
app/: __init__.py  database.py  main.py
app/core/: security.py
app/dependencies/: admin.py  auth.py
app/models/: __init__.py  administrador_model.py  enums.py  estatistica_model.py  historico_model.py  meta_estudo_model.py  notificacao_model.py  questao_model.py  resposta_model.py  usuario_model.py
app/routers/: __init__.py  administrador_router.py  auth_router.py  disciplina_router.py  estatistica_router.py  favorito_router.py  meta_estudo_router.py  notificacao_router.py  questao_router.py  resposta_router.py  usuario_router.py
app/schemas/: __init__.py  administrador_schemas.py  disciplina_schemas.py  estatistica_schemas.py  favorito_schemas.py  meta_estudo_schemas.py  notificacao_schemas.py  questao_schemas.py  resposta_schemas.py  usuario_schemas.py
frontend/: README.md  index.html  package-lock.json  package.json
migrations/: README  env.py
notebooks/: README.md  admin_seed_questions.py  user_activity_demo.py
tests/: conftest.py  test_admin_router.py  test_favorite_and_meta_services.py  test_question_services.py  test_response_statistics_goal_services.py  test_security.py  test_user_and_disciplina_services.py
(+314 files in other folders)
