[project]
name = "projeto-o-monitor-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.138.0",
    "marimo>=0.23.10",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = ["pyright>=1.1.410", "pytest>=9.0.2", "ruff>=0.15.18"]

[tool.ruff]
extend-exclude = ["migrations/versions/**"]
